--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,31 @@
 scikit-learn
+mlflow
+pandas
+numpy
+matplotlib
+seaborn
+scipy
+joblib
+xgboost
+lightgbm
+catboost
+tensorflow
+keras
+torch
+fastai
+pytorch-lightning
+optuna
+hyperopt
+scikit-optimize
+scikit-learn-extra
+imbalanced-learn
+shap
+eli5
+lime
+pdpbox
+shapash
+dtreeviz
+yellowbrick
+mlxtend
+scikit-plot
+scikit-learn-pandas
