--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ catboost
 tensorflow
 keras
 torch
+genism
 fastai
 pytorch-lightning
 optuna
 hyperopt
+sklearn
 scikit-optimize
 scikit-learn-extra
 imbalanced-learn
@@ -24,8 +26,24 @@ eli5
 lime
 pdpbox
 shapash
+nltk
 dtreeviz
 yellowbrick
 mlxtend
 scikit-plot
-scikit-learn-pandas
+torch
+torchvision
+torchtext
+pytorch
+tensorflow
+tensorflow_hub
+tensorflow_datasets
+keras
+keras-tuner
+keras-rl
+keras-vis
+keras-preprocessing
+keras-applications
+keras-embeddings
+keras-ocr
+keras-ocr
